[tool.poetry]
name = "course-4"
version = "0.1.0"
description = ""
authors = ["Mariya Kuznetsova <kuznetsova19.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
